# open-guardian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  LICENSE  README.md  build_error.txt  check.ps1  check_out.txt  guardian.toml  threats.json
.github/workflows/: ci.yml  release.yml
rules/: common.json  jailbreaks_en.json  jailbreaks_es.json
src/: audit.rs  banner.rs  config.rs  logger.rs  main.rs  proxy.rs  router.rs  server.rs
src/pipeline/: extract.rs  mod.rs
src/security/: dlp.rs  env_security.rs  injection.rs  injection_scanner.rs  integrity.rs  judge.rs  mod.rs  normalizer.rs  path_security.rs  rate_limit.rs  smuggling.rs  threat_engine.rs
tools/: gen_manifest.rs  generate_manifest.rs
