[package]
name = "open-guardian"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Anthony Smith"]
description = "The High-Performance Firewall for AI Agents."
repository = "https://github.com/AnthonySmith96/open-guardian"
keywords = ["ai", "security", "firewall", "llm", "rust"]
categories = ["network-programming", "science::robotics"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "brotli"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
colored = "2.0"
anyhow = "1.0"
moka = { version = "0.12", features = ["future"] }
seahash = "4.1"
tower-http = { version = "0.5", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower = "0.4"
hyper = "1.0"
http = "1.0"
async-trait = "0.1"
toml = "0.8"
service-manager = "0.10"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"
tokio-util = "0.7"
unidecode = "0.3"

# Security module dependencies (from Open-GuardIAn)
# HMAC for rule file integrity
hmac-sha256 = "1.1"
sha2 = "0.10"
hex = "0.4"

# Rate limiting
governor = "0.5"
nonzero_ext = "0.3"

# Unicode normalization
unicode-normalization = "0.1"

# Recursive decoding
html-escape = "0.2"
urlencoding = "2.1"

# Unix permissions check
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
